# maisontruvra

./: .env  .env.example  .replit  ADMIN_RECOMMENDATIONS_GUIDE.md  FRONTEND_RECOMMENDATIONS_GUIDE.md  Flask  RBAC.readme  README.md  REFACTORING_SUMMARY.md  SETUP_INSTRUCTIONS.md  TESTING_SIMULATION_SUMMARY.md  analyze-frontend.js  audit_log_20250630_224224.txt  audit_log_20250630_231349.txt  audit_log_20250701_192408.txt  audit_log_20250701_231057.txt  backend_code_scanner.py  bandit_stderr_manual.txt  bandit_stdout_manual.json  best_practices_audit.py  check_redis.sh  manage.py  package-lock.json  package.json  playwright-demo.config.ts  playwright.config.ts  pyproject.toml  run_audits.sh  run_linter.py  security_audit.py  security_audit_log_20250703_180714.txt  start_dev.sh  test_admin_recommendations.py  test_frontend_recommendations.cjs  test_https_example.py  tsconfig.json  tsconfig.node.json
backend/: __init__.py  celery_worker.py  config.py  database.py  database_schema_updates.sql  extensions.py  inputsanitizer.py  logger_and_error_handler.py  loggers.py  main_routes.py  middleware.py  requirements.txt  schemas.py  seed.py  tasks.py
logs/: audit_log_20250703_162657.txt  audit_log_20250703_162820.txt  audit_log_20250703_162838.txt  audit_log_20250703_163128.txt  audit_log_20250703_164323.txt  audit_log_20250703_164622.txt  audit_log_20250703_164716.txt  audit_log_20250703_164937.txt  audit_log_20250703_165244.txt  audit_log_20250703_172247.txt  audit_log_20250703_172513.txt  audit_log_20250703_172736.txt  audit_log_20250703_172948.txt  audit_log_20250703_173249.txt  audit_log_20250703_173601.txt  audit_log_20250703_174023.txt  audit_log_20250703_174801.txt  audit_log_20250703_175511.txt  audit_log_20250703_180713.txt
test-results/: .last-run.json
website/: base_template.html  charte_qualite.html  cookie_banner.html  footer.html  header.html  index.html  le-journal.html  notre-maison.html  (+8 more)
(+628 files in other folders)
